# ChangeLog for x11-plugins/noscript
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/noscript/ChangeLog,v 1.107 2008/05/02 13:35:21 maekke Exp $

  02 May 2008; Markus Meier <maekke@gentoo.org> noscript-1.5.ebuild:
  amd64 stable, bug #212480

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> noscript-1.5.ebuild:
  Stable on ppc64; bug #212480

  20 Apr 2008; nixnut <nixnut@gentoo.org> noscript-1.5.ebuild:
  Stable on ppc wrt bug 212480

  19 Apr 2008; Jeroen Roovers <jer@gentoo.org> noscript-1.5.ebuild:
  Stable for HPPA (bug #212480).

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org> noscript-1.5.ebuild:
  alpha/ia64/sparc/x86 stable

*noscript-1.6 (15 Apr 2008)

  15 Apr 2008; Raúl Porcel <armin76@gentoo.org> +noscript-1.6.ebuild:
  Version bump

  10 Apr 2008; Raúl Porcel <armin76@gentoo.org> +noscript-1.5.8.ebuild:
  Version bump

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> -noscript-1.5.8.ebuild:
  1.5.8 SRC_URI gives 404, remove

*noscript-1.5.8 (08 Apr 2008)

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> +noscript-1.5.8.ebuild:
  Version bump

*noscript-1.5.6 (31 Mar 2008)

  31 Mar 2008; Raúl Porcel <armin76@gentoo.org> -noscript-1.2.ebuild,
  -noscript-1.2.6.ebuild, -noscript-1.2.9.ebuild, +noscript-1.5.6.ebuild:
  Version bump

*noscript-1.5.2 (24 Mar 2008)

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> +noscript-1.5.2.ebuild:
  Version bump

*noscript-1.5 (17 Mar 2008)

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> noscript-1.1.7.2.ebuild,
  +noscript-1.5.ebuild:
  Version bump

  14 Mar 2008; Steve Dibb <beandog@gentoo.org> noscript-1.3.1.ebuild:
  amd64 stable, bug 212480

  07 Mar 2008; Brent Baude <ranger@gentoo.org> noscript-1.3.1.ebuild:
  stable ppc64, bug 212480

  06 Mar 2008; nixnut <nixnut@gentoo.org> noscript-1.3.1.ebuild:
  Stable on ppc wrt bug 212480

  06 Mar 2008; Jeroen Roovers <jer@gentoo.org> noscript-1.3.1.ebuild:
  Stable for HPPA (bug #212480).
