@@ -1,14 +1,8 @@
-DIST noscript-1.4.9.xpi 264047 RMD160 12bde1e95d7df7f74fb12e2bae6c34c2a8478846 SHA1 d89070d9488fe931d0c089a63256c551b0a903ce SHA256 e4e3c6fdf621163d309d1e06d37571b709c0cf93750824b90ab606fb7c89bfea
-DIST noscript-1.5.2.xpi 271792 RMD160 2a892639821c4115bcdb7def26bdedfa7f707c13 SHA1 702d505f58f5896088f3b81ee9a89fad8927b1a7 SHA256 3c413a5a6bd4e7e4bc4d8cc92206b02397cd1214555e65fc4fb38fe44308547c
-DIST noscript-1.5.6.xpi 272297 RMD160 6ba355ba7ea2d0e72ad1b870a932e73cb2da0bac SHA1 64144605f33d7e565249db36a5ff66d8e6664085 SHA256 5239e558f59ddd5658ba4d0a60b8b8055185b549e6a22750510a1e4416c2ef9f
-DIST noscript-1.5.8.xpi 12744 RMD160 b19131a2c5c05501e24d72432c8a9ce2fea91488 SHA1 fcee6e3467e4fa919bf4ef1922307d8f9048dc01 SHA256 1b5c9cf70e4817b145625036ff07443b3bd85d26e353b216e32c765854a73c7a
 DIST noscript-1.5.xpi 271663 RMD160 429d47976cff146b8b749d5219b250323ea38fe9 SHA1 5216c6b45316a868e1792f0d489b60609438e308 SHA256 44bfd060156749e2597c8f8d95a4d7a09036be9cc0abcc47bfb3e59d46a64768
+DIST noscript-1.6.5.xpi 278337 RMD160 c944cc652ac6324a7eee422f9752cd183d1855a8 SHA1 eff4ce3bc720d9b393b6994b5735286d8825fcf3 SHA256 b565502fa25f5f43eae4dec7de840f22beccb6805daaeac4f41a46de6108a6bc
 DIST noscript-1.6.xpi 274668 RMD160 7c0a14f6fd8158f3186d86445da9141db39fafa2 SHA1 28732972cec39f562eae526a6a44b3852753c6cc SHA256 5e758da0034b6783eb2d5a72926ccbd886f9b2db521863d7013d1ec699153d7c
-EBUILD noscript-1.4.9.ebuild 1035 RMD160 f911bbaaffb64cae3fe04821b6f6881e1ec67112 SHA1 5e5d57983fd7c4eecc0c8e337278ddaa8de02b95 SHA256 d57912cc744d73c12802ede709e79a1a316ce40bf84402efd8c515bab3429cc5
-EBUILD noscript-1.5.2.ebuild 1035 RMD160 78c974f4411965944813f4c54c4babfd5812bbfa SHA1 924c457ba514c01a0472bce093236b1d64970185 SHA256 d2f2547f297a4eeb1d1ec7d6e8d8481d36caa229366f801f52639bfaf1a7b836
-EBUILD noscript-1.5.6.ebuild 1035 RMD160 5492d23c99fee6eb737b9bc64a8effabfcbbbaa7 SHA1 46dd7d132ba5eaf27c21759d01bcb0dbc203ecf8 SHA256 5a31a3b18236f5cdb6171fbdf28ca85e0186febe6aa889ba53dfe205512d75fb
-EBUILD noscript-1.5.8.ebuild 1035 RMD160 849aba0ec4990bd4eb85600602d861da47525d75 SHA1 0c80580b086dc42eaae2c0b1e27d905c5433a8c0 SHA256 33b56780afdbd5e1dc83421ba10949c0d91ef0c543aad59ebc47e5e2f80a7b30
-EBUILD noscript-1.5.ebuild 1032 RMD160 d5d56b4d51709e1c3401f39188f0835de3cd94ce SHA1 ccad7cdb308f8238f9f43a07d93ecd9e392a043c SHA256 ac1d4b7789a369e3c7be0245b4502d874906c1f511fc6ce622d1485ed05d54b7
-EBUILD noscript-1.6.ebuild 1033 RMD160 89233c9e0dc6f969eb2d6846f26d70f554bf7c22 SHA1 4e5ce59216c2d2fdce2298f8ff34a0c22674a187 SHA256 3d9009d90b003d93bb8587fbccb3ddf43103f45799b25e0c381362f636bbd191
-MISC ChangeLog 13944 RMD160 98710844a2ad14df444b67b103db72da27337fee SHA1 f85660fc17b3cb07615a96dc76ac3ae308a38bbf SHA256 2bc523ebc0ed9f5f066bb6d6a6c78be0573a72200065d7f25829b87a52548252
+EBUILD noscript-1.5.ebuild 1008 RMD160 152e5a220ebba65a771364e0cac8bc1b9f2c709c SHA1 7f1da351149515614fe17f77d0a90a44d04d35e7 SHA256 7fbecddf2b666d0fd9786a0cde9b5f00627fc17eba264a0547553da112a0a4d1
+EBUILD noscript-1.6.5.ebuild 1011 RMD160 4a45f68c8e4c70201bd06aca63ba6ef8212be1ad SHA1 a56fe58df11f59301ad59cd5359a9abdcfd8b796 SHA256 6988f266bc1089e3c5f589a567a908ce66265dd71faf9fc5b22fbe2407dce43b
+EBUILD noscript-1.6.ebuild 1009 RMD160 fdffee21559411a861fd29fc5dcef9bd35c2600d SHA1 524e6c4d9187a7e4a970374d43f03b0a5c2e5f46 SHA256 9ead480ed983ee64322a381bfd7e228bf56d26445ed8bf8ea63cc2582507c5b9
+MISC ChangeLog 14065 RMD160 e9b5dadc95c48bbc3bca1c3b977ae3a6de161ea8 SHA1 c74a4bfcaa55d91d923d105d0bfe84185375abc7 SHA256 98832367939bff9e5ce081451e694c7617da342ae53bdbb0df654676c6124614
 MISC metadata.xml 328 RMD160 7d2512727c4295ca86b028edea2c2150191ee27b SHA1 f4db49bbc73bc75d69cc7e8dd1f436e91dea3c9f SHA256 3a75ad0084a701a164df71d693b92548e9e48b710a86528f1f3fa1f8f5686f4c
